<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:tabBackground="@drawable/tab_selector"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/standard_padding">

            <TextView
                android:id="@+id/back_slide"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/standard_button_height"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:drawableLeft="@drawable/ic_keyboard_arrow_left"
                android:drawableStart="@drawable/ic_keyboard_arrow_left"
                android:gravity="center|start"
                android:padding="@dimen/standard_padding"
                android:text="@string/back_slide"
                android:textColor="@color/white"
                android:visibility="gone">
            </TextView>

            <TextView
                android:id="@+id/next_slide"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/standard_button_height"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:drawableEnd="@drawable/ic_keyboard_arrow_right"
                android:drawableRight="@drawable/ic_keyboard_arrow_right"
                android:gravity="center"
                android:padding="@dimen/standard_padding"
                android:text="@string/next_slide"
                android:textColor="@color/white">
            </TextView>

            <TextView
                android:id="@+id/accept_slide"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/standard_button_height"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:drawableEnd="@drawable/ic_keyboard_arrow_right"
                android:drawableRight="@drawable/ic_keyboard_arrow_right"
                android:gravity="center"
                android:padding="@dimen/standard_padding"
                android:text="@string/accept_slide"
                android:textColor="@color/white"
                android:visibility="gone">
            </TextView>
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>